--- a/main.tex
+++ b/main.tex
@@ -314,12 +314,12 @@ squarednode/.style={rectangle, draw=red!60, fill=red!5, very thick, minimum size
 
 \section{K-vectors and K-forms}
 
-Let $\Phi \in F_2$ be a functional for magnetic flux; that is, the function that gives the "flow" of magnetic field through some surface, and let $\sigma \in S^2$ be such a surface. Mechanically, this is another example of a k-functional being passed a k-surface, and returning a real number. So, we may write that $\Phi(\sigma) = \Phi(\sigma^1) + \Phi(\sigma^2) + \Phi(\sigma^3) + ... = \sum_{i=1}^n \Phi(\sigma^i)$, which equals $\int_\sigma B(d\sigma)$ as n tends to infinity. This appears to be identical to the case where k=1. The difference comes in by realizing that the surface $\sigma$ may not be broken up into infinitesimal line elements. Rather, we have to use infinitesimal paralellograms. Just as $\Phi$ is a 2-functional and $\sigma$ a 2-surface, we call the infinitesimal parallelograms d$\sigma$ 2-vectors, and B a 2-form. Incidentally, just as the work 1-functional became force as a covector (in other words, a 1-form), the flux as a 2-functional became the magnetic field as a 2-form. We see that the general relationship between forms and functionals, and vectors and surfaces carries over into the two dimensional case.  
+Let $\Phi \in F_2$ be a functional for magnetic flux; that is, the function that gives the "flow" of magnetic field through some surface, and let $\sigma \in S^2$ be such a surface. Mathematically, this is another example of a k-functional being passed a k-surface, and returning a real number. So, we may write that $\Phi(\sigma) = \Phi(\sigma^1) + \Phi(\sigma^2) + \Phi(\sigma^3) + ... = \sum_{i=1}^n \Phi(\sigma^i)$, which becomes $\int_\sigma B(d\sigma)$ as n tends to infinity. This appears to be identical to the case where k=1. The difference comes in by realizing that the surface $\sigma$ may not be broken up into infinitesimal line elements. Rather, we have to use infinitesimal paralellograms. Just as $\Phi$ is a 2-functional and $\sigma$ a 2-surface, we call the infinitesimal parallelograms d$\sigma$ 2-vectors, and B a 2-form. Incidentally, just as the work 1-functional became force as a covector (in other words, a 1-form), the flux as a 2-functional became the magnetic field as a 2-form. We see that the general relationship between forms and functionals, and vectors and surfaces carries over into the two dimensional case.  
 
 
 We propose that in the general kth case, we can through integration connect our forms with functionals, and vectors with surfaces. Let $f_k \in F_k$ be a k-functional and $\sigma^k \in S^k$ a k-surface. We can say that $f_k(\sigma^k) = \sum_{i=1}^n f_k(\sigma^k_n) = \int_{\sigma^k} \omega_k(d\sigma^k)$ as n tends to infinity for some function $\omega_k$. We call $\omega_k$ a \textbf{k-form}, and d$\sigma^k$ a \textbf{k-vector}. 
 
-Using line segments or parallelograms as our infinitesimal elements is not sufficient on a k-surface. At this point, we must make use of infinitesimal \emph{parallelepipeds}: a k-dimensional shape whose sides are (k-1)-parallelepipeds. Whereas before when the line segments would be stuck end-to-end, the parallelepipeds will be stuck side-to-side, such that one side of one parallelepiped makes up one side of the other. With some hand-waviness, we can say that the infinitesimal elements in the cases of k=1 and k=2 are still parallelepipeds. In the case of k = 1, an infinitesimal segment may be thought of as a parallelepiped without width or height. By that same thinking, when k = 2, an infinitesimal area on a 2-surface may be thought of as a parallelepiped without height. 
+Using line segments or parallelograms as our infinitesimal elements is not sufficient on a k-surface. At this point, we must make use of infinitesimal \emph{parallelepipeds}: a k-dimensional shape whose sides are (k-1)-parallelepipeds. Whereas before when the line segments would be stuck end-to-end, the parallelepipeds will be stuck side-to-side, such that one side of one parallelepiped makes up one side of the other. We can say that the infinitesimal elements in the cases of k=1 and k=2 are still parallelepipeds. In the case of k = 1, an infinitesimal segment may be thought of as a parallelepiped without width or height. By that same thinking, when k = 2, an infinitesimal area on a 2-surface may be thought of as a parallelepiped without height. 
 
 
 \begin{defn}
@@ -348,12 +348,12 @@ To finish up the generalization of the previous section, we establish the relati
 	Every linear k-functional has a corresponding k-form, such that for $f_k : S^k \to \mathbb{R}$, $f_k = \int_{\sigma^k} \omega_k(d\sigma^k)$. In words, a linear functional applied over a k-surface is the same as an integral of a k-form over the infinitesimal parallelepipedes of that k-surface. 
 \end{prop}
 
-\textbf{(Look up geometric measure theory. Highlight in the introduction that the definitions as we put them don't give diff forms, but that this gives the right intuition. For a density, add a constant at a particular point. It doesn't change the over all mass. Take a force and increase it by a constant at a particular point, doesn't change the overall work)}
+\textbf{(Look up geometric measure theory. Highlight in the introduction that the definitions as we put them don't give diff forms (because the space isn't specifically differentiable, since we can add discontinuities and still end up with the same integral), but that this gives the right intuition. For a density, add a constant at a particular point. It doesn't change the over all mass. Take a force and increase it by a constant at a particular point, doesn't change the overall work)}
 
-A clarification must be made now. In most treatments of electromagnetism, the magnetic field $B$ is a pseudeovector. What this means is that $B$ behaves nicely and as a vector under rotation, but when reflected gains an additional sign flip. This particular characterization of $B$ does not generalize to higher dimensions. Instead, we will be treating $B$ as a matrix, as part of the electromagnetic field tensor (a type of object that also is yet undefined). This characterization \emph{does} generalize well.
+A clarification must be made now. In most treatments of electromagnetism, the magnetic field $B$ is a pseudeovector. What this means is that $B$ behaves nicely and as a vector under rotation, but when reflected gains an additional sign flip. This particular characterization of $B$ does not generalize to higher dimensions. Instead, we will be treating $B$ as a matrix, as part of the electromagnetic field tensor (a type of object that also is yet undefined). This characterization \emph{does} generalize well. (\textbf{Talk about perpendicular stuff up here, since that's the reason that B as a pseudovector doesn't generalize. Don't talk about the tensor yet. We can define B in terms of the surface, or the normal. This doesn't work in more than 3D, as discussed a little later})
 
 
-It is nevertheless interesting to talk about objects that undergo such sign flips under reflection. Consider an x-y coordinate plane, with x in the horizontal direction and y in the vertical direction. The coordinate system may be rotated freely (creating an equivalence class of directions), but try swapping x and y, so that x is now vertical and y is now horizontal. The original coordinate system can no longer be reached simply through rotation; it would require a flipping of one of the axes. We need a tool that has the property of sign-flips under permutations of components. This is the \textbf{wedge product}.
+It is nevertheless interesting to talk about objects that undergo such sign flips under reflection. Consider an x-y coordinate plane, with x in the horizontal direction and y in the vertical direction. The coordinate system may be rotated freely (creating an equivalence class of directions), but try swapping x and y, so that x is now vertical and y is now horizontal. The original coordinate system can no longer be reached simply through rotation; it would require a flipping of one of the axes. We need a tool that has the property of sign-flips under permutations of components. This is the \textbf{wedge product} (\textbf{In the definition, we talk about the wedge product forming paralellepipeds. There is no description of that here in this paragraph. Use the paralellepiped example as the motivating example}).
 \textbf{Probably put a picture of that here}
 
 
@@ -363,12 +363,13 @@ It is nevertheless interesting to talk about objects that undergo such sign flip
 	The \textbf{wedge product} $\wedge : V^k\times V^j \to V^{k+j}$ combines k-vectors antisymmetrically to generate parallelepipeds. 
 \end{defn}
 
-It may seem that the cross product in multivariable calculus and the wedge product are the same thing, but this is not the case. The difference comes in by the lack of generalization of the cross product. In 3D, the cross product gives a vector perpendicular to some surface. In 4D, however, there isn't simply one perpendicular, but two. In a general n-D space, there will be (n-2) perpendiculars. What we do instead is keep track of components using the two directions tangent to the point, rather than by the direction normal to the point (i.e., $B_z$ is actually $B_{xy}$).  . Furthermore, the cross product requires that angles be defined, and the reader may have noticed that we still have not yet given any notion of angles (that comes in chapter 3). The wedge product has no such restrictions, so it is the one that we will be using. 
+\textbf{Start with the problem that we want to construct areas. Cross product works in 3D, but not in 4D due to the two normals. Then we can talk about B in this same way.}
+It may seem that the cross product in multivariable calculus and the wedge product are the same thing, but this is not the case. The difference comes in by the lack of generalization of the cross product. In 3D, the cross product gives a vector perpendicular to some surface. In 4D, however, there isn't simply one perpendicular, but two. In a general n-D space, there will be (n-2) perpendiculars. What we do instead is keep track of components using the two directions tangent to the surface, rather than by the direction normal to the surface (i.e., $B_z$ is actually $B_{xy}$). Furthermore, the cross product requires that angles be defined, from which comes perpendicularity and the normal vector, and the reader may have noticed that we still have not yet given any notion of angles (that comes in chapter 3). The wedge product has no such restrictions, so it is the one that we will be using. 
 
 
 
 
-
+\textbf{Derive this stuff from the definitions given. We didn't define them to be skew symmetric, we defined them to take k-vector. It just so happens that if we have a k-vector is skew-symmetric, this property spreads to the k-form}
 We defined k-forms to be skew-symmetric, meaning that switching the order of the components of the k-form introduces a minus sign. This is the same property that k-vectors have, and this necessitated the use of the wedge product to combine them. Similarly, we may join k-forms using the wedge product, or decompose them into forms of lesser degree combined joined the wedge product. So, $\omega_2 \in \Omega_2$, we can say that $\omega_2 = \omega_1^a \wedge \omega_1^b$ for some 1-forms $\omega_1^a$ and $\omega_1^b$, and that $-\omega_2 = \omega_2^b \wedge \omega_2^a$. 
 
 
