--- a/main.tex
+++ b/main.tex
@@ -350,10 +350,11 @@ To finish up the generalization of the previous section, we establish the relati
 
 \textbf{(Look up geometric measure theory. Highlight in the introduction that the definitions as we put them don't give diff forms (because the space isn't specifically differentiable, since we can add discontinuities and still end up with the same integral), but that this gives the right intuition. For a density, add a constant at a particular point. It doesn't change the over all mass. Take a force and increase it by a constant at a particular point, doesn't change the overall work)}
 
-A clarification must be made now. In most treatments of electromagnetism, the magnetic field $B$ is a pseudeovector. What this means is that $B$ behaves nicely and as a vector under rotation, but when reflected gains an additional sign flip. This particular characterization of $B$ does not generalize to higher dimensions. Instead, we will be treating $B$ as a matrix, as part of the electromagnetic field tensor (a type of object that also is yet undefined). This characterization \emph{does} generalize well. (\textbf{Talk about perpendicular stuff up here, since that's the reason that B as a pseudovector doesn't generalize. Don't talk about the tensor yet. We can define B in terms of the surface, or the normal. This doesn't work in more than 3D, as discussed a little later})
+A clarification must be made now. In most treatments of electromagnetism, the magnetic field $B$ is a pseudeovector. What this means is that $B$ behaves nicely and as a vector under rotation, but when reflected gains an additional sign flip. This particular characterization of $B$ depends on a notion of perpendicularity that is true for $\mathbb{R}^3$, but isn't for $\mathbb{R}^4$ and above, and is also the reason why we will not be using the cross product in our discussion here. The cross product depends on there being only one direction normal to a surface, which is the case in $\mathbb{R}^3$. In $\mathbb{R}^4$ on the other hand, there are \emph{two} directions normal to each surface, and in general n-dimensional space, there will be (n-2) perpendiculars. What we do instead is keep track of components using the two directions tangent to the surface, rather than by the direction normal to the surface (i.e., $B_z$ is actually $B_{xy}$). Furthermore, the cross product requires that angles be defined, from which comes perpendicularity and the normal vector, and the reader may have noticed that we still have not yet given any notion of angles (that comes in chapter 3). 
 
 
-It is nevertheless interesting to talk about objects that undergo such sign flips under reflection. Consider an x-y coordinate plane, with x in the horizontal direction and y in the vertical direction. The coordinate system may be rotated freely (creating an equivalence class of directions), but try swapping x and y, so that x is now vertical and y is now horizontal. The original coordinate system can no longer be reached simply through rotation; it would require a flipping of one of the axes. We need a tool that has the property of sign-flips under permutations of components. This is the \textbf{wedge product} (\textbf{In the definition, we talk about the wedge product forming paralellepipeds. There is no description of that here in this paragraph. Use the paralellepiped example as the motivating example}).
+
+Consider the problem now of constructing areas, volumes, and their higher dimensional equivalents. Arranging two 1-vectors $\vec{a}$ and $\vec{b}$ such that they both share a starting point allows one to construct a paralellogram (a 2-vector) with sides made up of the 1-vectors. The area and orientation of this 2-vector depends on the magnitudes and orientations of the two component 1-vectors. In 3D space, this orientation would be the line normal to the 2-surface, but we are not necessarily in 3D space. By flipping the direction of one of the vectors, the area of the resulting 2-vector would be the same as before, but the orientation (the normal) would be flipped. What's happening here is that we are combining two 1-vectors to create a 2-vector. This same mechanism works for a 1-vector and a 2-vector, creating a 3-vector, as well as for the arbitrary m-vector and n-vector, creating an (m+n) vector (though for vectors of degree greater than three, this is much harder to visualize). We require also that our method for combining k-vectors is anticommutitive or skew-symmetric; that is, by flipping one of the components, the magnitude remains the same, but the orientation flips. The tool that does this is the \textbf{wedge product}.
 \textbf{Probably put a picture of that here}
 
 
@@ -363,14 +364,14 @@ It is nevertheless interesting to talk about objects that undergo such sign flip
 	The \textbf{wedge product} $\wedge : V^k\times V^j \to V^{k+j}$ combines k-vectors antisymmetrically to generate parallelepipeds. 
 \end{defn}
 
-\textbf{Start with the problem that we want to construct areas. Cross product works in 3D, but not in 4D due to the two normals. Then we can talk about B in this same way.}
-It may seem that the cross product in multivariable calculus and the wedge product are the same thing, but this is not the case. The difference comes in by the lack of generalization of the cross product. In 3D, the cross product gives a vector perpendicular to some surface. In 4D, however, there isn't simply one perpendicular, but two. In a general n-D space, there will be (n-2) perpendiculars. What we do instead is keep track of components using the two directions tangent to the surface, rather than by the direction normal to the surface (i.e., $B_z$ is actually $B_{xy}$). Furthermore, the cross product requires that angles be defined, from which comes perpendicularity and the normal vector, and the reader may have noticed that we still have not yet given any notion of angles (that comes in chapter 3). The wedge product has no such restrictions, so it is the one that we will be using. 
 
 
 
 
-\textbf{Derive this stuff from the definitions given. We didn't define them to be skew symmetric, we defined them to take k-vector. It just so happens that if we have a k-vector is skew-symmetric, this property spreads to the k-form}
-We defined k-forms to be skew-symmetric, meaning that switching the order of the components of the k-form introduces a minus sign. This is the same property that k-vectors have, and this necessitated the use of the wedge product to combine them. Similarly, we may join k-forms using the wedge product, or decompose them into forms of lesser degree combined joined the wedge product. So, $\omega_2 \in \Omega_2$, we can say that $\omega_2 = \omega_1^a \wedge \omega_1^b$ for some 1-forms $\omega_1^a$ and $\omega_1^b$, and that $-\omega_2 = \omega_2^b \wedge \omega_2^a$. 
+
+Consider $\omega_k \in \Omega^k$, $v^i \in V^i$, and $v^j \in V^j$ such that $i + j = k$. $\omega_k$ can act on the wedge of $v^i$ and $v^j$ such that $\omega_k(v^i\wedge v^j) = -\omega_k(v^j \wedge v^i)$. We can say also that $\omega_k(v^i \wedge v^j) = \omega_i(v^i)\wedge \omega_j(v^j) = -\omega_j(v^j) \wedge \omega_i(v^i)$. We see therefore that the skew-symmetric nature of k-vectors carries over to the k-forms. 
+
+
 
 
 
