--- a/main.tex
+++ b/main.tex
@@ -350,11 +350,11 @@ To finish up the generalization of the previous section, we establish the relati
 
 \textbf{(Look up geometric measure theory. Highlight in the introduction that the definitions as we put them don't give diff forms (because the space isn't specifically differentiable, since we can add discontinuities and still end up with the same integral), but that this gives the right intuition. For a density, add a constant at a particular point. It doesn't change the over all mass. Take a force and increase it by a constant at a particular point, doesn't change the overall work)}
 
-A clarification must be made now. In most treatments of electromagnetism, the magnetic field $B$ is a pseudeovector. What this means is that $B$ behaves nicely and as a vector under rotation, but when reflected gains an additional sign flip. This particular characterization of $B$ depends on a notion of perpendicularity that is true for $\mathbb{R}^3$, but isn't for $\mathbb{R}^4$ and above, and is also the reason why we will not be using the cross product in our discussion here. The cross product depends on there being only one direction normal to a surface, which is the case in $\mathbb{R}^3$. In $\mathbb{R}^4$ on the other hand, there are \emph{two} directions normal to each surface, and in general n-dimensional space, there will be (n-2) perpendiculars. What we do instead is keep track of components using the two directions tangent to the surface, rather than by the direction normal to the surface (i.e., $B_z$ is actually $B_{xy}$). Furthermore, the cross product requires that angles be defined, from which comes perpendicularity and the normal vector, and the reader may have noticed that we still have not yet given any notion of angles (that comes in chapter 3). 
+A clarification must be made now. In most treatments of electromagnetism, the magnetic field $B$ is a pseudeovector. What this means is that $B$ behaves nicely and as a vector under rotation, but when reflected gains an additional sign flip. This particular characterization of $B$ depends on a notion of perpendicularity that is true for $\mathbb{R}^3$, but isn't for $\mathbb{R}^4$ and above, and is also the reason why we will not be using the cross product in our discussion here. The cross product depends on there being only one linearly independent direction normal to a surface, which is the case in $\mathbb{R}^3$. In $\mathbb{R}^4$ on the other hand, there are \emph{two} directions normal to each surface, and in general n-dimensional space, there will be (n-2) linearly independent perpendiculars. What we do instead is keep track of components using the two directions tangent to the surface, rather than by the direction normal to the surface (i.e., $B^z$ is actually $B^{xy}$). Furthermore, the cross product requires that angles be defined, from which comes perpendicularity and the normal vector, and the reader may have noticed that we have not yet given any notion of angles (that comes in chapter 3). 
 
 
 
-Consider the problem now of constructing areas, volumes, and their higher dimensional equivalents. Arranging two 1-vectors $\vec{a}$ and $\vec{b}$ such that they both share a starting point allows one to construct a paralellogram (a 2-vector) with sides made up of the 1-vectors. The area and orientation of this 2-vector depends on the magnitudes and orientations of the two component 1-vectors. In 3D space, this orientation would be the line normal to the 2-surface, but we are not necessarily in 3D space. By flipping the direction of one of the vectors, the area of the resulting 2-vector would be the same as before, but the orientation (the normal) would be flipped. What's happening here is that we are combining two 1-vectors to create a 2-vector. This same mechanism works for a 1-vector and a 2-vector, creating a 3-vector, as well as for the arbitrary m-vector and n-vector, creating an (m+n) vector (though for vectors of degree greater than three, this is much harder to visualize). We require also that our method for combining k-vectors is anticommutitive or skew-symmetric; that is, by flipping one of the components, the magnitude remains the same, but the orientation flips. The tool that does this is the \textbf{wedge product}.
+Consider the problem now of constructing surfaces, volumes, and their higher dimensional equivalents. Arranging two 1-vectors $\vec{a}$ and $\vec{b}$ such that they both share a starting point allows one to construct a paralellogram (a 2-vector) with sides made up of the 1-vectors. The area and orientation of this 2-vector depends on the magnitudes and orientations of the two component 1-vectors. In 3D space, this orientation would be the line normal to the 2-surface, but we are not necessarily in 3D space. By flipping the direction of one of the vectors, the area of the resulting 2-vector would be the same as before, but the orientation (the normal) would be flipped. What's happening here is that we are combining two 1-vectors to create a 2-vector. This same mechanism works for a 1-vector and a 2-vector, creating a 3-vector, as well as for the arbitrary m-vector and n-vector, creating an (m+n) vector (though for vectors of degree greater than three, this is much harder to visualize). We require also that our method for combining k-vectors is anticommutitive or skew-symmetric; that is, by flipping the order of the components, the magnitude remains the same, but the orientation flips. The tool that does this is the \textbf{wedge product}.
 \textbf{Probably put a picture of that here}
 
 
@@ -370,6 +370,9 @@ Consider the problem now of constructing areas, volumes, and their higher dimens
 
 
 Consider $\omega_k \in \Omega^k$, $v^i \in V^i$, and $v^j \in V^j$ such that $i + j = k$. $\omega_k$ can act on the wedge of $v^i$ and $v^j$ such that $\omega_k(v^i\wedge v^j) = -\omega_k(v^j \wedge v^i)$. We can say also that $\omega_k(v^i \wedge v^j) = \omega_i(v^i)\wedge \omega_j(v^j) = -\omega_j(v^j) \wedge \omega_i(v^i)$. We see therefore that the skew-symmetric nature of k-vectors carries over to the k-forms. 
+\textbf{Write this out using the component form, talk about how it's the normal way to write it. Then define the wedge product on the forms such that the property given above holds true. Also, not necessarily true that a form can be decomposed, but it is true that they can be arbitrarily combined. We will say that we can decompose them, since any form can be create from 1-forms. }
+
+\textbf{Define the k-form on a list of vectors. Say that it's possible to construct a wedge product on the forms such that the above is always true. Maybe start givng some examples. Like, give two vectors, show how the wedge product works instead of cross product, and how they generalize in higher dimensions. }
 
 
 
@@ -472,6 +475,8 @@ squarednode/.style={rectangle, draw=red!60, fill=red!5, very thick, minimum size
 \draw[<-] (f1) -- (w1) node[midway, below] {$\int$};
 \draw[<-] (w2) -- (w1) node[midway, right] {$\eth$};
 \end{tikzpicture}
+
+\textbf{Examples: Definitily show how the exterior derivative is the gradient for a 0-form, a divergence for the 1-form, etc.}
 
 
 \begin{defn}
